clean up before release